Reload the key store for the $http stage when it changes